--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,11 +4,26 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: #ffffff;
 }
+
+.header--secondary {
+    font-weight: 300;
+    color: #ffffff;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    font-size: 21px;
+    color: gray;
+}
+
+/* LINK */
 
 .link--cta {
     font-size: 16px;
